--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -415,7 +415,12 @@ body {
     .cls-54,
     .cls-55,
     .cls-56,
-    .cls-57 {
+    .cls-57,
+    .cls-58,
+    .cls-59,
+    .cls-60,
+    .cls-61,
+    .cls-62 {
         stroke-width: 0px;
     }
 
@@ -424,270 +429,271 @@ body {
     }
 
     .cls-3 {
-        fill: #c99;
+        fill: url(#Degradado_sin_nombre_36);
     }
 
     .cls-4 {
-        fill: #4d4d4d;
+        fill: #c99;
     }
 
     .cls-5 {
-        fill: #666;
+        fill: #4d4d4d;
     }
 
     .cls-6 {
-        fill: #fcc;
+        fill: #666;
     }
 
     .cls-7 {
-        fill: #d4643e;
+        fill: #fcc;
     }
 
     .cls-8 {
+        fill: #d4643e;
+    }
+
+    .cls-9 {
         fill: #2eef49;
     }
 
-    .cls-9,
-    .cls-17,
-    .cls-50 {
-        fill: #0ac;
-    }
-
-    .cls-9,
-    .cls-25,
-    .cls-37,
-    .cls-42,
-    .cls-44,
-    .cls-47,
-    .cls-55,
+    .cls-10,
+    .cls-19,
     .cls-56 {
-        opacity: 0.5;
+        fill: #0ac;
     }
 
     .cls-10,
     .cls-29,
-    .cls-50 {
+    .cls-41,
+    .cls-47,
+    .cls-49,
+    .cls-52,
+    .cls-61,
+    .cls-62 {
+        opacity: 0.5;
+    }
+
+    .cls-11,
+    .cls-33,
+    .cls-56 {
         opacity: 0.4;
     }
 
-    .cls-10,
-    .cls-37 {
+    .cls-11,
+    .cls-41 {
         fill: #ea82f9;
     }
 
-    .cls-11 {
+    .cls-12 {
         fill: #339;
     }
 
-    .cls-12 {
+    .cls-13 {
         fill: #633;
     }
 
-    .cls-58 {
-        stroke-width: 2px;
-    }
-
-    .cls-58,
-    .cls-59,
-    .cls-60,
-    .cls-61,
-    .cls-62 {
-        stroke-miterlimit: 10;
-    }
-
-    .cls-58,
-    .cls-32 {
-        fill: #fff;
-    }
-
-    .cls-58,
-    .cls-61,
-    .cls-62 {
-        stroke-linecap: round;
-    }
-
-    .cls-58,
-    .cls-62 {
-        stroke: gray;
-    }
-
-    .cls-13 {
+    .cls-14 {
         fill: #c60;
     }
 
-    .cls-59 {
+    .cls-63 {
         stroke: #e42320;
         stroke-width: 4.28px;
     }
 
-    .cls-59,
-    .cls-61 {
+    .cls-63,
+    .cls-64,
+    .cls-65 {
+        stroke-miterlimit: 10;
+    }
+
+    .cls-63,
+    .cls-65 {
         fill: none;
     }
 
-    .cls-15 {
+    .cls-16 {
+        fill: #909799;
+    }
+
+    .cls-17 {
         fill: #e42320;
     }
 
-    .cls-16 {
+    .cls-18 {
         fill: #930;
     }
 
-    .cls-18 {
+    .cls-20 {
         fill: #aef4d1;
     }
 
-    .cls-19 {
+    .cls-21 {
         fill: #2b2827;
     }
 
-    .cls-20 {
+    .cls-22 {
+        fill: url(#Degradado_sin_nombre_30);
+    }
+
+    .cls-23 {
         fill: #600e0e;
     }
 
-    .cls-21 {
+    .cls-24 {
         fill: #9b4ee5;
     }
 
-    .cls-22 {
-        opacity: 0.2;
-    }
-
-    .cls-23,
-    .cls-29,
-    .cls-55 {
-        fill: #38166d;
-    }
-
-    .cls-24 {
-        fill: gray;
-    }
-
-    .cls-25,
-    .cls-36 {
-        fill: #6161d1;
+    .cls-25 {
+        fill: #1f3c90;
     }
 
     .cls-26 {
-        fill: #333;
+        opacity: 0.2;
     }
 
-    .cls-27 {
-        fill: #732a14;
+    .cls-27,
+    .cls-33,
+    .cls-61 {
+        fill: #38166d;
     }
 
     .cls-28 {
-        fill: #ccc;
+        fill: gray;
     }
 
-    .cls-30,
-    .cls-60 {
-        fill: #494949;
+    .cls-29,
+    .cls-40 {
+        fill: #6161d1;
+    }
+
+    .cls-30 {
+        fill: #333;
     }
 
     .cls-31 {
-        fill: #85edb9;
+        fill: #732a14;
     }
 
-    .cls-63 {
-        opacity: 0.75;
+    .cls-32 {
+        fill: #ccc;
     }
 
-    .cls-33 {
-        opacity: 0.6;
-    }
-
-    .cls-34 {
-        fill: #963;
+    .cls-34,
+    .cls-64 {
+        fill: #494949;
     }
 
     .cls-35 {
-        fill: #c49d65;
+        fill: #85edb9;
+    }
+
+    .cls-36 {
+        fill: #fff;
+    }
+
+    .cls-66 {
+        opacity: 0.75;
+    }
+
+    .cls-37,
+    .cls-43 {
+        opacity: 0.6;
     }
 
     .cls-38 {
-        fill: #f7e8bc;
+        fill: #963;
     }
 
     .cls-39 {
-        fill: #dbb579;
-    }
-
-    .cls-40 {
-        fill: #336;
-    }
-
-    .cls-41 {
-        fill: #5a5b5a;
+        fill: #c49d65;
     }
 
     .cls-42 {
-        fill: #f79b16;
+        fill: #dbb579;
     }
 
     .cls-43 {
-        fill: #a6a6a6;
+        fill: #0b1138;
     }
 
     .cls-44 {
-        fill: #aae8f9;
+        fill: #336;
     }
 
     .cls-45 {
-        fill: #93d6e5;
+        fill: #5a5b5a;
     }
 
     .cls-46 {
-        fill: #222223;
+        fill: #ede848;
     }
 
     .cls-47 {
-        fill: #e5c528;
+        fill: #f79b16;
     }
 
     .cls-48 {
-        fill: #d2dbda;
+        fill: #a6a6a6;
     }
 
     .cls-49 {
+        fill: #aae8f9;
+    }
+
+    .cls-50 {
+        fill: #93d6e5;
+    }
+
+    .cls-51 {
+        fill: #222223;
+    }
+
+    .cls-52 {
+        fill: #e5c528;
+    }
+
+    .cls-53 {
+        fill: #d2dbda;
+    }
+
+    .cls-54 {
         fill: #b3d4e5;
     }
 
-    .cls-60 {
+    .cls-55 {
+        fill: #b74e29;
+        opacity: 0.85;
+    }
+
+    .cls-64 {
         stroke: #fff;
         stroke-width: 0.25px;
     }
 
-    .cls-61 {
+    .cls-65 {
         stroke: #280a54;
-    }
-
-    .cls-51 {
-        fill: #838483;
-    }
-
-    .cls-62 {
-        fill: #ede848;
-    }
-
-    .cls-52 {
-        fill: #eaeaea;
-    }
-
-    .cls-53 {
-        fill: #9cf;
-    }
-
-    .cls-54 {
-        fill: #cecece;
-    }
-
-    .cls-56 {
-        fill: #94edad;
+        stroke-linecap: round;
     }
 
     .cls-57 {
-        fill: #d8caa4;
+        fill: #838483;
+    }
+
+    .cls-58 {
+        fill: #eaeaea;
+    }
+
+    .cls-59 {
+        fill: #9cf;
+    }
+
+    .cls-60 {
+        fill: #cecece;
+    }
+
+    .cls-62 {
+        fill: #94edad;
     }
     .desk_tablet_screen {
         transition: fill 250ms ease-in-out;
@@ -737,7 +743,7 @@ body {
     }
 
     .desk_portfolio:hover {
-        transform: translateX(7rem);
+        transform: translateX(-10rem);
     }
     .desk_ball {
         margin-top: 10rem;
