--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -700,6 +700,9 @@ body {
     .desk_ball:hover {
         animation: bounceUp 1000ms 250ms infinite ease-in-out;
     }
+    .svg_btn {
+        cursor: crosshair;
+    }
 }
 .desk_icon_container {
     width: 100%;
